Refine Java 17 upgrade: remove cosmetic changes per review feedback
Keep only substantive changes:
- @Serial annotations on serialVersionUID fields
- instanceof pattern matching
- Build config (pom.xml dependency scopes, lombok version)

Reverted per maintainer feedback:
- String.format() -> .formatted() (semantically identical, code churn)
- !isPresent() -> isEmpty() (style preference)
- Text blocks (style preference)

Build verified: all 41 modules compile successfully with JDK 17.