@@ -48,7 +48,8 @@ class PrimitivesArgumentFactory extends DelegatingArgumentFactory {
             if (cfg.get(Arguments.class).isBindingNullToPrimitivesPermitted()) {
                 return null;
             } else {
-                throw new IllegalArgumentException("binding null to a primitive %s is forbidden by configuration, declare a boxed type instead".formatted(type
+                throw new IllegalArgumentException(String.format(
+                        "binding null to a primitive %s is forbidden by configuration, declare a boxed type instead", type
                 ));
             }
         }
