@@ -38,7 +38,8 @@ public class MapCollectors {
     private static <K, V, M extends Map<K, V>> void putEntry(M map, K key, V value) {
         V oldValue = map.put(key, value);
         if (oldValue != null) {
-            throw new IllegalStateException("Multiple values for Map key '%s': ['%s','%s',...]".formatted(
+            throw new IllegalStateException(String.format(
+                "Multiple values for Map key '%s': ['%s','%s',...]",
                 key,
                 oldValue,
                 value));
