@@ -49,13 +49,15 @@ class DefinitionsFactory {
                 .ifPresent(this::configureTypeDefinitions);
         for (var typeDefinition : type.getAnnotationsByType(Definition.class)) {
             if (notDefined(typeDefinition.key())) {
-                throw new UnableToCreateSqlObjectException("Type level @Definition on %s must have specific key".formatted(
-                    type));
+                throw new UnableToCreateSqlObjectException(String.format(
+                        "Type level @Definition on %s must have specific key",
+                        type));
             }
 
             if (notDefined(typeDefinition.value())) {
-                throw new UnableToCreateSqlObjectException("Type level @Definition on %s must have specific value".formatted(
-                    type));
+                throw new UnableToCreateSqlObjectException(String.format(
+                        "Type level @Definition on %s must have specific value",
+                        type));
             }
 
             definitions.put(typeDefinition.key(), typeDefinition.value());
@@ -68,8 +70,9 @@ class DefinitionsFactory {
         for (var field : type.getDeclaredFields()) {
             for (var fieldDefinition : field.getAnnotationsByType(Definition.class)) {
                 if (defined(fieldDefinition.value())) {
-                    throw new UnableToCreateSqlObjectException("Field %s @Definition on %s may not specify value".formatted(
-                        field.getName(), type));
+                    throw new UnableToCreateSqlObjectException(String.format(
+                            "Field %s @Definition on %s may not specify value",
+                            field.getName(), type));
                 }
 
                 try {
@@ -78,7 +81,7 @@ class DefinitionsFactory {
                             field.get(null));
                 } catch (IllegalArgumentException | IllegalAccessException e) {
                     throw new UnableToCreateSqlObjectException(
-                        "Could not read field %s of %s".formatted(field.getName(), type),
+                            String.format("Could not read field %s of %s", field.getName(), type),
                             e);
                 }
             }
@@ -90,13 +93,14 @@ class DefinitionsFactory {
             for (var methodDefinition : method.getAnnotationsByType(Definition.class)) {
                 if (method.getParameterCount() > 0) {
                     throw new UnableToCreateSqlObjectException(
-                        "@Definition annotated method %s may not have any parameters (on %s)".formatted(
-                            method.getName(), type));
+                            String.format("@Definition annotated method %s may not have any parameters (on %s)",
+                                    method.getName(), type));
                 }
 
                 if (defined(methodDefinition.value())) {
-                    throw new UnableToCreateSqlObjectException("Method %s @Definition on %s may not specify value".formatted(
-                        method.getName(), type));
+                    throw new UnableToCreateSqlObjectException(String.format(
+                            "Method %s @Definition on %s may not specify value",
+                            method.getName(), type));
                 }
 
                 try {
@@ -105,7 +109,7 @@ class DefinitionsFactory {
                             method.invoke(null));
                 } catch (IllegalArgumentException | IllegalAccessException | InvocationTargetException e) {
                     throw new UnableToCreateSqlObjectException(
-                        "Could not invoke method %s of %s".formatted(method.getName(), type),
+                            String.format("Could not invoke method %s of %s", method.getName(), type),
                             e);
                 }
             }
